<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"




    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle_gradient"
    tools:context="com.gts.aaron.sunnybay.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp"

    >

    <TextView
        android:id="@+id/tempMinLabelId"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_weight="1"
        android:text="@string/temperature_min_label"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gradientEnd"
        app:layout_constraintRight_toLeftOf="@+id/humidityLabelId"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/humidityLabelId"
        android:layout_marginTop="33dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="33dp"
        app:layout_constraintLeft_toLeftOf="@+id/humidityLabelId"
        app:layout_constraintTop_toTopOf="@+id/tempMaxLabelId" />

    <TextView
        android:id="@+id/windSpeedId"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginTop="42dp"
        android:layout_weight="1"
        android:hint="Loading..."
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gradientEnd"
        app:layout_constraintLeft_toLeftOf="@+id/humidityId"
        app:layout_constraintRight_toRightOf="@+id/humidityId"
        app:layout_constraintTop_toBottomOf="@+id/humidityId"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/dailyMinLowId"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_weight="1"
        android:hint="Loading..."
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gradientEnd"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/dailyMaxTempId"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/dailyMaxTempId"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/dailyMaxTempId" />

    <TextView
        android:id="@+id/cloudLabelId"
        android:layout_width="54dp"
        android:layout_height="26dp"
        android:layout_weight="1"
        android:text="Clouds"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gradientEnd"
        app:layout_constraintRight_toLeftOf="@+id/cloudTextId"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/windSpeedId"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="33dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="33dp"
        app:layout_constraintLeft_toLeftOf="@+id/windSpeedLabel"
        app:layout_constraintTop_toTopOf="@+id/humidityId"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <TextView
        android:id="@+id/dailyMaxTempId"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_weight="1"
        android:hint="Loading..."
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gradientEnd"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/LongitudeTextId"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/weatherDescriptionId" />

    <TextView
        android:id="@+id/LongitudeTextId"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_weight="1"
        android:hint="loading..."
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gradientEnd"
        app:layout_constraintLeft_toLeftOf="@+id/dailyMaxTempId"
        app:layout_constraintRight_toRightOf="@+id/dailyMaxTempId"
        app:layout_constraintTop_toBottomOf="@+id/LatitudeTextId"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/humidityLabelId"
        android:layout_width="75dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="Humidity"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gradientEnd"
        app:layout_constraintBottom_toTopOf="@+id/cloudLabelId"
        app:layout_constraintLeft_toLeftOf="@+id/windSpeedLabel"
        app:layout_constraintRight_toLeftOf="@+id/humidityId"
        app:layout_constraintTop_toBottomOf="@+id/dailyMinLowId"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/descriptionLabelId"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_weight="1"
        android:text="@string/Description_Text_Label"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gradientEnd"
        app:layout_constraintRight_toLeftOf="@+id/weatherDescriptionId"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/tempMaxLabelId"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/longitudeLabelId"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="13dp"
        app:layout_constraintLeft_toLeftOf="@+id/windDirectionLabel"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp" />

    <TextView
        android:id="@+id/humidityId"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_weight="1"
        android:hint="Loading..."
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gradientEnd"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/dailyMinLowId"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/dailyMinLowId"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/dailyMinLowId" />

    <TextView
        android:id="@+id/tempMaxLabelId"
        android:layout_width="111dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/temperature_max_label"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gradientEnd"
        app:layout_constraintRight_toLeftOf="@+id/dailyMaxTempId"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/dailyMaxTempId"
        android:layout_marginEnd="19dp"
        app:layout_constraintTop_toTopOf="@+id/dailyMaxTempId"
        android:layout_marginRight="19dp" />



    <TextView
        android:id="@+id/windSpeedLabel"
        android:layout_width="100dp"
        android:layout_height="26dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="Wind Speed"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gradientEnd"
        app:layout_constraintBottom_toTopOf="@+id/windDirectionId"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/windDirectionLabel"
        app:layout_constraintRight_toLeftOf="@+id/windSpeedId"
        app:layout_constraintTop_toBottomOf="@+id/cloudLabelId"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/latitudeTextLabelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/Latitude_Text_Label"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gradientEnd"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="120dp"
        android:layout_marginTop="72dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="120dp" />

    <TextView
        android:id="@+id/weatherDescriptionId"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginEnd="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginStart="70dp"
        android:layout_weight="1"
        android:hint="Loading..."
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gradientEnd"
        app:layout_constraintBottom_toBottomOf="@+id/descriptionLabelId"
        app:layout_constraintLeft_toLeftOf="@+id/latitudeTextLabelId"
        app:layout_constraintRight_toRightOf="@+id/titleTextId"
        app:layout_constraintTop_toTopOf="@+id/descriptionLabelId"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />


    <TextView
        android:id="@+id/longitudeLabelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/Longitude_Text_Label"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gradientEnd"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/latitudeTextLabelId"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/latitudeTextLabelId" />


    <TextView
        android:id="@+id/LatitudeTextId"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="loading..."
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gradientEnd"
        app:layout_constraintLeft_toLeftOf="@+id/LongitudeTextId"
        app:layout_constraintRight_toRightOf="@+id/LongitudeTextId"
        app:layout_constraintTop_toTopOf="@+id/latitudeTextLabelId"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/cloudTextId"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_weight="1"
        android:hint="Loading..."
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gradientEnd"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/windSpeedId"
        android:layout_marginTop="33dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="34dp"
        app:layout_constraintLeft_toLeftOf="@+id/humidityId"
        app:layout_constraintTop_toTopOf="@+id/humidityId"
        android:layout_marginLeft="1dp" />

    <TextView
        android:id="@+id/windDirectionId"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_weight="1"
        android:hint="Loading..."
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gradientEnd"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/windSpeedId"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/windSpeedId"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/windSpeedId" />

    <TextView
        android:id="@+id/windDirectionLabel"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="33dp"
        android:layout_weight="1"
        android:text="Wind Direction"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gradientEnd"
        app:layout_constraintLeft_toLeftOf="@+id/tempMaxLabelId"
        app:layout_constraintTop_toTopOf="@+id/windSpeedLabel"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/titleTextId"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_weight="1"
        android:text="@string/app_title_text"
        android:textColor="@color/gradientStart"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent" />


</android.support.constraint.ConstraintLayout>
